--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -7,3 +7,12 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 server:
   port: 8081
+
+spring:
+  boot:
+    admin:
+      url: http://localhost:8086
+
+management:
+  security:
+    enabled: false
