fix spring boot admin server config

--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -12,7 +12,12 @@ spring:
   boot:
     admin:
       url: http://localhost:8086
+  profiles:
+    active: production
+  application:
+    name: client-app-usa
 
 management:
   security:
     enabled: false
+
