--- a/service-discovery-client-region2.yaml
+++ b/service-discovery-client-region2.yaml
@@ -12,6 +12,10 @@ spring:
   boot:
     admin:
       url: http://localhost:8086
+  profiles:
+    active: production
+  application:
+    name: client-app-usa
 
 management:
   security:
