fix spring boot admin server config

--- a/service-discovery-server-region1.yaml
+++ b/service-discovery-server-region1.yaml
@@ -10,3 +10,16 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+spring:
+  boot:
+    admin:
+      url: http://localhost:8086
+  profiles:
+    active: production
+  application:
+    name: service-discovery
+
+management:
+  security:
+    enabled: false
