--- a/api-gateway-region1.yaml
+++ b/api-gateway-region1.yaml
@@ -13,3 +13,16 @@ zuul:
     client:
       path: /client/**
       serviceId: service-discovery-client
+
+spring:
+  boot:
+    admin:
+      url: http://localhost:8086
+  profiles:
+    active: production
+  application:
+    name: api-gateway
+
+management:
+  security:
+    enabled: false
