--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -15,7 +15,7 @@ spring:
   profiles:
     active: production
   application:
-    name: client-app-usa
+    name: client-app-canada
 
 management:
   security:
