fix clients names

--- a/service-discovery-client-region2.yaml
+++ b/service-discovery-client-region2.yaml
@@ -15,7 +15,7 @@ spring:
   profiles:
     active: production
   application:
-    name: client-app-usa
+    name: service-discovery-client
 
 management:
   security:
