fix Kotlin client

--- a/api-gateway-region1.yaml
+++ b/api-gateway-region1.yaml
@@ -13,6 +13,9 @@ zuul:
     client:
       path: /client/**
       serviceId: service-discovery-client
+    kotlin-client:
+      path: /kotlin-client/**
+      serviceId: service-kotlin-client
 
 spring:
   boot:
