--- a/service-go-client-region1.yaml
+++ b/service-go-client-region1.yaml
@@ -1,9 +1,3 @@
-eureka:
-  instance:
-    metadataMap:
-      region: Japan
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8085
+port: 8085
+region: Japan
+discovery: http://localhost:8761/eureka/
