--- a/service-go-client-region2.yaml
+++ b/service-go-client-region2.yaml
@@ -1,9 +1,3 @@
-eureka:
-  instance:
-    metadataMap:
-      region: China
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8085
+port: 8086
+region: China
+discovery: http://localhost:8761/eureka/
