--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -21,4 +21,4 @@ management:
   security:
     enabled: false
     
-configurable-name: Efficient service in Canada
+configurable-name: Simple service in Canada
