--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -20,5 +20,5 @@ spring:
 management:
   security:
     enabled: false
-    
-configurable-name: Simple service in Canada
+
+configurable-name: Simple service for Knights
