--- a/service-discovery-client-region2.yaml
+++ b/service-discovery-client-region2.yaml
@@ -6,7 +6,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8082
+  port: ${PORT:8082}
 
 spring:
   boot:
@@ -16,6 +16,11 @@ spring:
     active: production
   application:
     name: service-discovery-client
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: rabbit
+    password: secret
 
 management:
   security:
