--- a/service-kotlin-client-region1.yaml
+++ b/service-kotlin-client-region1.yaml
@@ -6,7 +6,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8083
+  port: ${PORT:8083}
 
 spring:
   boot:
@@ -16,6 +16,11 @@ spring:
     active: production
   application:
     name: service-kotlin-client
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: rabbit
+    password: secret
 
 management:
   security:
