--- a/service-discovery-client-region1.yaml
+++ b/service-discovery-client-region1.yaml
@@ -26,4 +26,4 @@ management:
   security:
     enabled: false
 
-configurable-name: Simple service for Princesses
+configurable-name: Simple service for Knights
